--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.1.2",
+    "cronstrue": "^3.9.0",
+    "diff": "^8.0.2",
+    "js-yaml": "^4.1.1",
+    "jwt-decode": "^4.0.0",
+    "monaco-editor": "^0.55.1",
     "naive-ui": "^2.40.2",
     "pinia": "^2.2.6",
     "vfonts": "^0.0.3",
@@ -18,6 +23,8 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.5",
+    "@types/diff": "^7.0.2",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.8.1",
